# conciliacion

./: .env.example  .env.gemini  .gitignore  README.md  RESUMEN_EXTRACCION_FACTURAS.md  fix_imports.sh  pyproject.toml  resultados_dos_lineas.json  resultados_formato_real.json  resultados_test_real_format.json
app/: __init__.py  main.py
app/conciliacion/: README.md  __init__.py  bajioocr.py  banorteocr.py  bbvaocr.py  conciliador.py  (+10 more)
docs/: SETUP.md
ejemplos/: conciliacion_bancaria_ejemplo.py
frontend/: CONCILIACION_FRONTEND.md  README.md  conciliacion_dashboard.html  package-lock.json  package.json  simple_pdf_processor.html
scripts/: analyze_real_pdf.py  check_config.py  check_db_connection.py  cleanup_unused_files.py  create_conciliacion_tables.py  create_real_test_pdf.py  debug_inbursa_pdf.py  debug_server_processing.py  install_gemini.py  quick_db_check.py  quick_test.py  run_server.py  test_bank_improvements.py  test_bank_statement.py  test_bank_statement_direct.py  test_banorte_real.py  test_banorte_real_format.py  test_banorte_specific.py  test_conciliacion.py  test_cuentas_por_pagar.py  test_different_bank_formats.py  test_dos_lineas.py  test_endpoint.py  test_gemini_processor.py  test_hybrid_system.py  test_improved_processor.py  test_inbursa_detection.py  test_inbursa_formats.py  test_inbursa_real_format.py  test_invoice_processor.py  test_large_documents.py  test_malformed_json.py  test_model_selection.py  test_pdf_direct.py  test_real_format.py  test_routes.py  test_simple_pdf.py  test_special_cases.py  test_spei_format.py  test_thinking_mode.py  (+1 more)
(+37 files in other folders)
