[project]
name = "conciliacion-bancaria"
version = "1.0.0"
description = "Sistema avanzado de conciliación bancaria con OCR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.41",
    "pymysql>=1.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.1.1",
    "python-dateutil>=2.9.0.post0",
    "openai>=1.97.0",
    "pymupdf>=1.26.3",
    "pillow>=11.3.0",
]
