[project]
name = "conciliacion-bancaria"
version = "1.0.0"
description = "Sistema avanzado de conciliación bancaria con OCR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9.0.post0",
    "openai>=1.97.0",
    "pymupdf>=1.24",
    "pillow>=10",
    "numpy>=1.26.4",
    "opencv-python-headless>=4.10.0.84",
    "google-genai>=0.5",
    "httpx>=0.27",
]
